Fixed assumption of non-Windows newline encoding in reading key files.